fix scrollbar behavior

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -18,14 +18,14 @@
     margin-right: 10%;
     margin: 0 auto;
     padding: 0;
-    z-index: 0;
+    z-index: 10;
     padding: 2rem;
     margin-top: -2rem;
   }
   &__group {
     background-color: var(--color-board-group-default);
     color: var(--color-white);
-    width: 30rem;
+    width: 30rem !important;
     height: max-content;
     padding: 0.5rem;
     display: flex;
